--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.2.0",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.8"
